--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.6.2",
+    "swiper": "^12.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
