--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         shell: bash
         run: |
           git fetch origin ${{ github.ref_name }} --depth=2
-          if git diff --name-only HEAD~1 HEAD | grep "^apps/landing/"; then
+          if git diff --name-only HEAD~1 HEAD | grep "^projects/landing/"; then
             echo "changed=true" >> $GITHUB_OUTPUT
           else
             echo "changed=false" >> $GITHUB_OUTPUT
@@ -67,7 +67,7 @@ jobs:
         shell: bash
         run: |
           git fetch origin ${{ github.ref_name }} --depth=2
-          if git diff --name-only HEAD~1 HEAD | grep "^apps/calendar/"; then
+          if git diff --name-only HEAD~1 HEAD | grep "^projects/calendar/"; then
             echo "changed=true" >> $GITHUB_OUTPUT
           else
             echo "changed=false" >> $GITHUB_OUTPUT
