fix: 배포 이슈 수정

--- a/projects/landing/vercel.json
+++ b/projects/landing/vercel.json
@@ -2,7 +2,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "installCommand": "npm install",
+  "installCommand": "cd ../.. && rm -rf node_modules package-lock.json && npm install --force",
   "rewrites": [
     {
       "source": "/(.*)",
