--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,13 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'projects/landing/package-lock.json'
-
       - name: Check for landing changes
         id: landing_changes
         shell: bash
@@ -29,15 +22,10 @@ jobs:
             echo "changed=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Install dependencies (landing)
-        if: steps.landing_changes.outputs.changed == 'true'
-        working-directory: projects/landing
-        run: npm install
-
       - name: vercel pull (landing)
         if: steps.landing_changes.outputs.changed == 'true'
         shell: bash
-        working-directory: projects/landing
+        working-directory: .
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_LANDING }}
@@ -49,7 +37,7 @@ jobs:
       - name: vercel build (landing)
         if: steps.landing_changes.outputs.changed == 'true'
         shell: bash
-        working-directory: projects/landing
+        working-directory: .
         run: |
           if [ "${{ github.ref_name }}" = "main" ]; then
             npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
@@ -60,7 +48,7 @@ jobs:
       - name: vercel deploy (landing)
         if: steps.landing_changes.outputs.changed == 'true'
         shell: bash
-        working-directory: projects/landing
+        working-directory: .
         run: |
           if [ "${{ github.ref_name }}" = "main" ]; then
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
@@ -74,13 +62,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'projects/calendar/package.json'
-
       - name: Check for calendar changes
         id: calendar_changes
         shell: bash
@@ -92,15 +73,10 @@ jobs:
             echo "changed=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Install dependencies (calendar)
-        if: steps.calendar_changes.outputs.changed == 'true'
-        working-directory: projects/calendar
-        run: npm install
-
       - name: vercel pull (calendar)
         if: steps.calendar_changes.outputs.changed == 'true'
         shell: bash
-        working-directory: projects/calendar
+        working-directory: .
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}
@@ -112,7 +88,7 @@ jobs:
       - name: vercel build (calendar)
         if: steps.calendar_changes.outputs.changed == 'true'
         shell: bash
-        working-directory: projects/calendar
+        working-directory: .
         run: |
           if [ "${{ github.ref_name }}" = "main" ]; then
             npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
@@ -123,7 +99,7 @@ jobs:
       - name: vercel deploy (calendar)
         if: steps.calendar_changes.outputs.changed == 'true'
         shell: bash
-        working-directory: projects/calendar
+        working-directory: .
         run: |
           if [ "${{ github.ref_name }}" = "main" ]; then
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
