--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -24,22 +24,11 @@ jobs:
         with:
           ref: ${{ github.ref }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
       # landing
-      - name: Install dependencies (landing)
-        if: ${{ github.event.inputs.app == 'landing' }}
-        working-directory: projects/landing
-        run: npm install
-
       - name: vercel pull (landing)
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: projects/landing
+        working-directory: .
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_LANDING }}
@@ -50,7 +39,7 @@ jobs:
       - name: vercel build (landing)
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: projects/landing
+        working-directory: .
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
             npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
@@ -61,7 +50,7 @@ jobs:
       - name: vercel deploy (landing)
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: projects/landing
+        working-directory: .
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
@@ -70,15 +59,10 @@ jobs:
           fi
 
       # calendar
-      - name: Install dependencies (calendar)
-        if: ${{ github.event.inputs.app == 'calendar' }}
-        working-directory: projects/calendar
-        run: npm install
-
       - name: vercel pull (calendar)
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
-        working-directory: projects/calendar
+        working-directory: .
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}
@@ -89,7 +73,7 @@ jobs:
       - name: vercel build (calendar)
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
-        working-directory: projects/calendar
+        working-directory: .
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
             npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
@@ -100,7 +84,7 @@ jobs:
       - name: vercel deploy (calendar)
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
-        working-directory: projects/calendar
+        working-directory: .
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
