--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_LANDING }}
         run: |
-          npx vercel pull --yes \
+          npx vercel@48.0.3 pull --yes \
             --environment=$([ '${{ github.ref_name }}' = 'main' ] && echo production || echo preview) \
             --token=${{ secrets.VERCEL_TOKEN }}
 
@@ -40,9 +40,9 @@ jobs:
         working-directory: .
         run: |
           if [ "${{ github.ref_name }}" = "main" ]; then
-            npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 build --prod --token=${{ secrets.VERCEL_TOKEN }}
           else
-            npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 build --token=${{ secrets.VERCEL_TOKEN }}
           fi
 
       - name: vercel deploy (landing)
@@ -51,9 +51,9 @@ jobs:
         working-directory: .
         run: |
           if [ "${{ github.ref_name }}" = "main" ]; then
-            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
+            npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
           else
-            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
           fi
 
   deploy-calendar:
@@ -81,7 +81,7 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}
         run: |
-          npx vercel pull --yes \
+          npx vercel@48.0.3 pull --yes \
             --environment=$([ '${{ github.ref_name }}' = 'main' ] && echo production || echo preview) \
             --token=${{ secrets.VERCEL_TOKEN }}
 
@@ -91,9 +91,9 @@ jobs:
         working-directory: .
         run: |
           if [ "${{ github.ref_name }}" = "main" ]; then
-            npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 build --prod --token=${{ secrets.VERCEL_TOKEN }}
           else
-            npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 build --token=${{ secrets.VERCEL_TOKEN }}
           fi
 
       - name: vercel deploy (calendar)
@@ -102,7 +102,7 @@ jobs:
         working-directory: .
         run: |
           if [ "${{ github.ref_name }}" = "main" ]; then
-            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
+            npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
           else
-            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
           fi
