--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -33,7 +33,7 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_LANDING }}
         run: |
-          npx vercel pull --yes --environment=${{ github.event.inputs.deploy_env }} \
+          npx vercel@48.0.3 pull --yes --environment=${{ github.event.inputs.deploy_env }} \
             --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: vercel build (landing)
@@ -42,9 +42,9 @@ jobs:
         working-directory: .
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
-            npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 build --prod --token=${{ secrets.VERCEL_TOKEN }}
           else
-            npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 build --token=${{ secrets.VERCEL_TOKEN }}
           fi
 
       - name: vercel deploy (landing)
@@ -53,9 +53,9 @@ jobs:
         working-directory: .
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
-            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
+            npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
           else
-            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
           fi
 
       # calendar
@@ -67,7 +67,7 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}
         run: |
-          npx vercel pull --yes --environment=${{ github.event.inputs.deploy_env }} \
+          npx vercel@48.0.3 pull --yes --environment=${{ github.event.inputs.deploy_env }} \
             --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: vercel build (calendar)
@@ -76,9 +76,9 @@ jobs:
         working-directory: .
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
-            npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 build --prod --token=${{ secrets.VERCEL_TOKEN }}
           else
-            npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 build --token=${{ secrets.VERCEL_TOKEN }}
           fi
 
       - name: vercel deploy (calendar)
@@ -87,7 +87,7 @@ jobs:
         working-directory: .
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
-            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
+            npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
           else
-            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+            npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
           fi
