--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: vercel pull (landing)
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: .
+        working-directory: projects/landing
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_LANDING }}
@@ -39,7 +39,7 @@ jobs:
       - name: vercel build (landing)
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: .
+        working-directory: projects/landing
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
             npx vercel@48.0.3 build --prod --token=${{ secrets.VERCEL_TOKEN }}
@@ -50,7 +50,7 @@ jobs:
       - name: vercel deploy (landing)
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: .
+        working-directory: projects/landing
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
             npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
@@ -62,7 +62,7 @@ jobs:
       - name: vercel pull (calendar)
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
-        working-directory: .
+        working-directory: projects/calendar
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}
@@ -73,7 +73,7 @@ jobs:
       - name: vercel build (calendar)
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
-        working-directory: .
+        working-directory: projects/calendar
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
             npx vercel@48.0.3 build --prod --token=${{ secrets.VERCEL_TOKEN }}
@@ -84,7 +84,7 @@ jobs:
       - name: vercel deploy (calendar)
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
-        working-directory: .
+        working-directory: projects/calendar
         run: |
           if [ "${{ github.event.inputs.deploy_env }}" = "production" ]; then
             npx vercel@48.0.3 deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
