--- a/projects/calendar/package.json
+++ b/projects/calendar/package.json
@@ -35,6 +35,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.9.0",
+    "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
